<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CPET.FragmentCPET0">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="fill_vertical"
                android:padding="10dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/welcome"
                    android:text="@string/cpet0_1"
                   android:textAlignment="textStart"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/hong"
                    android:contentDescription="@string/cpet0_3" />

            </RelativeLayout>

            <VideoView
                android:id="@+id/vv"
                android:layout_width="wrap_content"
                android:layout_height="240dp" />


            <LinearLayout
                android:padding="14dp"
                android:id="@+id/child_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="80dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/gowun"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/cpet0_2"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>