<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F5"
    tools:context=".setting.SetThreeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="14dp"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/elice"
                android:text="@string/uuhcr"
                android:textAlignment="center"
                android:textColor="#009688"
                android:textSize="28sp" />

            <View
                android:id="@+id/divider7"
                android:layout_width="300dp"
                android:layout_height="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:background="@color/colorPrimaryDark" />

            <View
                android:id="@+id/divider8"
                android:layout_width="140dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/profile"

                android:orientation="horizontal"
                android:padding="2dp">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:padding="8dp"
                    app:srcCompat="@drawable/crkim2"
                    tools:ignore="ImageContrastCheck" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/elice"
                        android:text="@string/kcr0"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:text="@string/kcr"
                        android:textColor="#004D40" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/profile"
                android:backgroundTint="#E8CFCE"
                android:orientation="horizontal"
                android:padding="2dp">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:padding="8dp"
                    app:srcCompat="@drawable/ljy" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/elice"
                        android:text="@string/ljy0"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:text="@string/ljy"
                        android:textColor="#6D4C41" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/profile"
                android:backgroundTint="#00BCD4"
                android:orientation="horizontal"
                android:padding="2dp">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:padding="8dp"
                    app:srcCompat="@drawable/har" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/elice"
                        android:text="@string/har0"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:text="@string/har"
                        android:textColor="#263238" />

                </LinearLayout>

            </LinearLayout>

      <!--
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/profile"
                android:backgroundTint="#E8CFCE"
                android:orientation="horizontal"
                android:padding="2dp">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:padding="8dp"
                    app:srcCompat="@drawable/kdy" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="김대영"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:text="울산대병원 재활의학과\n심장재활 전담전공의 " />

                </LinearLayout>

            </LinearLayout>
            -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/profile"
                android:orientation="horizontal"
                android:padding="2dp">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:padding="8dp"
                    app:srcCompat="@drawable/kji" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/elice"
                        android:text="@string/kji0"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:text="@string/kji"
                        android:textColor="#004D40" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</RelativeLayout>