<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/recordBP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/profile"
                android:backgroundTint="#4A00BCD4"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@drawable/profile"
                    android:backgroundTint="#D301C1B1"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textView29"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:fontFamily="@font/elice"
                            android:text="@string/_1"
                            android:textColor="#795548"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/button3"
                            android:layout_width="80dp"
                            android:layout_height="48dp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/profile"
                            android:backgroundTint="@color/white"
                            android:text="@string/choice"
                            android:textColor="#0097A7"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/upDate_ed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="8dp"
                        android:ems="10"
                        android:textAlignment="textStart"
                        android:textColor="#795548"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/profile"
                    android:backgroundTint="#D301C1B1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/elice"
                        android:text="@string/_2"
                        android:textColor="#795548"
                        android:textSize="20sp" />

                    <Spinner
                        android:id="@+id/spinner_ed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/profile"
                        android:backgroundTint="@color/white"
                        android:minHeight="48dp"
                        android:spinnerMode="dropdown"
                        android:theme="@style/SpinnerTheme"
                        tools:ignore="SpeakableTextPresentCheck" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/profile"
                    android:backgroundTint="#D301C1B1"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textView27"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/elice"
                        android:text="@string/_3"
                        android:textColor="#795548"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <NumberPicker
                            android:id="@+id/np_hour"
                            android:layout_width="wrap_content"
                            android:layout_height="120dp"
                            android:layout_marginEnd="8dp"
                            android:theme="@style/numberPickerCustomSize" />

                        <TextView
                            android:id="@+id/textView25"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/hour"
                            android:textColor="#795548"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <NumberPicker
                            android:id="@+id/np_min"
                            android:layout_width="wrap_content"
                            android:layout_height="120dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:theme="@style/numberPickerCustomSize" />

                        <TextView
                            android:id="@+id/textView26"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/min"
                            android:textColor="#795548"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="132dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/profile"
                    android:backgroundTint="#D301C1B1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView28"
                            android:layout_width="120dp"
                            android:layout_height="26dp"
                            android:fontFamily="@font/elice"
                            android:text="@string/_4"
                            android:textColor="#795548"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/seebar_result"
                            android:layout_width="200dp"
                            android:layout_height="26dp"
                            android:layout_marginStart="20dp"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <SeekBar
                        android:id="@+id/seekBar"
                        style="@style/Widget.AppCompat.SeekBar.Discrete"
                        android:layout_width="300dp"
                        android:layout_height="30dp"
                        android:max="15"
                        android:progress="0"
                        android:progressDrawable="@drawable/ex_seekbar"
                        android:thumb="@drawable/ex_seekbar_thumb" />

                    <ImageView
                        android:id="@+id/imageView15"
                        android:layout_width="260dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="6dp"
                        app:srcCompat="@drawable/rpe1"
                        android:contentDescription="@string/rpe" />
                </LinearLayout>

                <EditText
                    android:id="@+id/editTextTextMultiLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="운동 중 궁금하거나 불편한 사항이\n있었다면 여기에 간단히 적어주세요\n"
                    android:inputType="textMultiLine"
                    android:background="@color/white"
                    android:padding="6dp"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:padding="16dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"

                    android:orientation="horizontal">


                    <Button
                        android:id="@+id/recordBtn1"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/button_color"
                        android:backgroundTint="#D301C1B1"
                        android:fontFamily="@font/welcome"
                        android:text="@string/n"
                        android:textColor="#006064"
                        android:textSize="20sp"
                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:id="@+id/resultBtn1"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/button_color2"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/welcome"
                        android:text="@string/see"
                        android:textColor="#009688"
                        android:textSize="20sp"
                        style="?android:attr/buttonBarButtonStyle" />


                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>